<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello" translatable="false">Hello World, recognizerActivity!</string>
    <string name="app_name" translatable="false">DTMF decoder</string>
    <string name="start" translatable="false">Start</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="clear" translatable="false">Clear</string>
    <string name="history" translatable="false">History</string>
    <string name="main" translatable="false">Main</string>
    <string name="send" translatable="false">Send</string>
    <string name="about" translatable="false">About</string>
    <string name="empty_history" translatable="false">History is empty</string>
    <string name="about_text" translatable="false">DTMF decoder can recognize tonal sounds generated by the phones. The application allows you to send the number and view history of recognized numbers.</string>





    <!-- Strings related to login -->
    <string name="btnReceiver" translatable="false">I am the receiver</string>
    <string name="btnStartSender" translatable="false">Start</string>
    <string name="textEnterLengthOfTone" translatable="false">Enter the length of tone to be produced</string>
    <string name="textWaitTime" translatable="false">Enter the time to wait after tone is heard</string>
    <string name="textLengthToneToHear" translatable="false">Enter the length of tone to be heard</string>
    <string name="btnSender" translatable="false">I am the sender</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="done" translatable="false">Next</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
